--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
 								<section class="box style1">
 									<img class="image-width" src="images/rbc.png"></img>
 									<h3>RBC</h3>
-									<h5>Corporate Systems<h5>
-                                                                        <h5>Digital<h5>
+									<h5>Capital Markets<h5>
+                                    <h5>Digital<h5>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
 									<span class="icon featured fa-user"></span>
-									<h3>Front-End Developer</h3>
-									<p>HTML | CSS | Javascript <br>
-									AngularJS | Spring MVC | JQuery <br>
-									SDLC | Agile | Scrum</p>
+									<h3>Full-Stack Developer</h3>
+									<p>HTML5 | CSS3 | Javascript <br>
+									MEAN Stack | Node.JS | React <br>
+									SDLC | Git | Scrum</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -114,19 +114,19 @@
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<img class="image-width" src="images/angularjs.png"></img>
-									<p>With two years of experience using AngularJS, I understand the concept of Data Binding, Ng-Scopes, Dependencies, Directives, Services, Modules, Digest Cycles and more.</p>
+									<p>With two years of experience using Angular.JS and Angular 4, I understand the concept of Data Binding, Ng-Scopes, Dependencies, Directives, Services, Modules, Digest Cycles and server sided rendering</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<img class="image-width" src="images/frontend.png"></img>
-									<p>As an aspiring front-end developer, I know the latest trends in CSS3, HTML5 and Javascript such as Material Design, Webkits, Keyframes and W3.</p>
+									<p>As a full-stack developer, I know the latest trends in CSS3, HTML5 and Javascript (ES2015) such as pre-compiled CSS, material design, responsive UI, and lambdas</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<img class="image-width" src="images/scrum.png"></img>
-									<p>Certified as an agile practitioner, I understand how the Scrum Framework works and have taken on a role as the scrum master, creating burn down charts, hosting planning sessions and retrospectives.</p>
+									<p>Certified as an agile practitioner, I understand how the Scrum Framework works and have taken on a role as the scrum master, creating burn down charts, hosting planning sessions and retrospectives</p>
 								</article>
 							</div>
 						</div>
@@ -134,19 +134,19 @@
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<img class="image-width" src="images/java.jpg"></img>
-									<p>As one of the most popular and commonly used languages, I have grasped the theories of OOP, Singletons, Static Space, Primitive Types and more.</p>
+									<p>As one of the most popular and commonly used languages, I have learned Object Oriented Programming and SOLID principles</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<img class="image-width" src="images/python.png"></img>
-									<p>I have primarily used Python to create automated test cases in ROBOT Framework, but I have also leveraged Python's multiparadigm approach with it's OO, procedural and functional programming.</p>
+									<p>I have primarily used Python to create automated test cases in ROBOT Framework, but also leveraged Python's multiparadigm approach with it's OO, procedural and functional programming</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<img class="image-width" src="images/spring.png"></img>
-									<p>Spring MVC, as one of the best web application frameworks written in Java, I have grasped the concept of JavaBeans, Injections, Dependency Injections and POJOs.</p>
+									<p>Spring MVC, as one of the best web application frameworks written in Java, I have grasped the concept of JavaBeans, Injections, Dependency Injections and POJOs</p>
 								</article>
 							</div>
 						</div>
